# Python-Modules

python_module_00/ex01/: ft_plot_area.py
python_module_00/ex02/: ft_harvest_total.py
python_module_00/ex03/: ft_plant_age.py
python_module_00/ex05/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
python_module_00/ex07/: ft_seed_inventory.py  main.py
python_module_00/ex1/: ft_plot_area.py
python_module_00/ex3/: ft_plant_age.py
python_module_00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
python_module_00/ex6/: ft_garden_summary.py
python_module_00/ex7/: ft_seed_inventory.py
python_module_01/ex0/: ft_garden_intro.py
python_module_01/ex00/: ft_garden_intro.py
python_module_01/ex1/: ft_garden_data.py
python_module_01/ex2/: ft_plant_growth.py
python_module_01/ex3/: ft_plant_factory.py
python_module_01/ex4/: ft_garden_security.py
python_module_01/ex5/: ft_plant_types.py
python_module_01/ex6/: ft_garden_analytics.py
python_module_02/ex0/: ft_first_exception.py
python_module_02/ex1/: ft_different_errors.py
python_module_02/ex2/: ft_custom_errors.py
python_module_02/ex3/: ft_finally_block.py
python_module_02/ex4/: ft_raise_errors.py
python_module_02/ex5/: ft_garden_management.py
python_module_03/ex0/: ft_command_quest.py
python_module_06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
python_module_07/: __init__.py
python_module_08/ex1/: loading.py  pyproject.toml
python_module_09/: test_nested_models.py  test_space_crew.py  test_validations.py
(+52 files in other folders)
